--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -3,7 +3,7 @@ worker_processes 4;
 pid /run/nginx.pid;
 
 events {
-    worker_connections  2048;
+    worker_connections 256;
     multi_accept on;
     use epoll;
 }
@@ -27,8 +27,13 @@ http {
     client_body_in_file_only off;
 
     server {
-        client_max_body_size 1000M;
-        root /var/www/public;
+        proxy_read_timeout 300;
+        proxy_connect_timeout 300;
+        proxy_send_timeout 300;
+        client_max_body_size 100M;
+        server_name localhost;
+        root /var/www/html/public;
+        
         location / {
             try_files $uri @rewriteapp;
         }
@@ -43,6 +48,11 @@ http {
             include fastcgi_params;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             fastcgi_param HTTPS off;
+            fastcgi_buffers 16 16k;
+            fastcgi_buffer_size 32k;
         }
+        
+        error_log /var/log/nginx/website_error.log;
+        access_log /var/log/nginx/website_access.log;
     }
 }
