--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,6 @@ on:
   push:
     branches:
       - master
-env:
-  # Use docker.io for Docker Hub if empty
-  REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
-  # github.repository as <account>/<repo>
-  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build:
@@ -32,7 +27,7 @@ jobs:
 
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
-      - name: Log into registry ${{ env.REGISTRY }}
+      - name: Log into registry ${{ secrets.DOCKER_REGISTRY }}
 #        if: github.event_name != 'pull_request'
         uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
         with:
@@ -45,4 +40,4 @@ jobs:
         with:
           context: .
           push: true
-#          tags: ${{ secrets.DOCKER_REGISTRY }}/dashboard:${{ github.ref_name }}
+          tags: ${{ secrets.DOCKER_REGISTRY }}/${{ github.event.repository.name }}:latest
