--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,4 +40,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_REGISTRY }}/${{ github.event.repository.name }}:latest
+          tags: ${{ secrets.DOCKER_REGISTRY }}/docker-symfony-php:8
