--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,25 +11,25 @@ jobs:
     permissions:
       contents: read
       packages: write
-      # This is used to complete the identity challenge
-      # with sigstore/fulcio when running outside of PRs.
       id-token: write
+
+    strategy:
+      matrix:
+        php-version: ['8.1', '8.2', '8.3', '8.4']
+      fail-fast: false
+
+    env:
+      LATEST_PHP: '8.4'
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Set up BuildKit Docker container builder to be able to build
-      # multi-platform images and export cache
-      # https://github.com/docker/setup-buildx-action
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
+        uses: docker/setup-buildx-action@v3
 
-      # Login against a Docker registry except on PR
-      # https://github.com/docker/login-action
       - name: Log into registry
-#        if: github.event_name != 'pull_request'
-        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
+        uses: docker/login-action@v3
         with:
           registry: ${{ secrets.DOCKER_REGISTRY }}
           username: ${{ secrets.DOCKER_LOGIN }}
@@ -40,4 +40,18 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_REGISTRY }}/docker-symfony-php:8
+          build-args: |
+            PHP_VERSION=${{ matrix.php-version }}
+          tags: |
+            ${{ secrets.DOCKER_REGISTRY }}/docker-symfony-php:${{ matrix.php-version }}
+        # ajoute latest seulement si on est sur la version définie comme LATEST_PHP
+      - name: Tag latest
+        if: matrix.php-version == env.LATEST_PHP
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          build-args: |
+            PHP_VERSION=${{ matrix.php-version }}
+          tags: |
+            ${{ secrets.DOCKER_REGISTRY }}/docker-symfony-php:latest
